--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -104,6 +104,7 @@ img:hover {
     .grid img, .grid div {
         margin-bottom: 20px; 
     }
+
 }
 
     </style>
@@ -163,9 +164,9 @@ img:hover {
 
         <div class="grid left">
             <div>
-                <a href="https://aimeeyi01.github.io/aimeeyi.github.io//">Studio 3<br>As Identity: Find Your Cocktail<br>Still in the works...</a>
+                <a href="https://aimeeyi01.github.io/aimeeyi.github.io/findcocktail/">Studio 3<br>As Identity: Find Your Cocktail</a>
             </div>
-            <img src="cocktail.png" alt="6">
+            <img src="cocktail.jpeg" alt="6">
         </div>
 
         <div class="grid right">
