--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -138,7 +138,7 @@ img:hover {
         </div>
 
         <div class="grid right">
-            <img src="communication.jpg" alt="3">
+            <img src="conversation.jpeg" alt="3">
             <div class="kong"></div>
             <div class="kong"></div>
             <div>
