--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -142,7 +142,7 @@ img:hover {
             <div class="kong"></div>
             <div class="kong"></div>
             <div>
-                <a href="https://aimeeyi01.github.io/aimeeyi.github.io/conversation/">Lab 2<br>Visual Communication: Lamb</a>
+                <a href="https://aimeeyi01.github.io/aimeeyi.github.io/conversation/">Lab 2<br>Visual Conversation: Lamb</a>
             </div>
         </div>
 
