--- a/findcocktail/about.html
+++ b/findcocktail/about.html
@@ -10,6 +10,10 @@ body {
     font-style: normal;
 }
 
+h1 {
+    text-align: center;
+}
+
 .container {
     max-width: 700px; 
     margin: 0 auto; 
@@ -42,11 +46,11 @@ body {
 }
 
 img[src="card.png"] {
-    border: 1.5px solid #216583; 
+    border: 1px solid #05558E; 
 }
 
-img[src="cardall.png"] {
-    border: 1.5px solid black; 
+img[src="allcard.jpg"] {
+   
 }
 
 .back-button-container {
@@ -141,7 +145,7 @@ img[src="cardall.png"] {
 
         <div class="image-section">
             <img src="card.png" alt="Image 3">
-            <img src="cardall.png" alt="Image 4">
+            <img src="allcard.jpg" alt="Image 4">
         </div>
 
         <div class="text-section">
